# apertium-snd

./: .gitattributes  Makefile  Makefile.am  NOTES  README  URLs.txt  apertium-snd.pc.in  apertium-snd.snd.acx  apertium-snd.snd.dix  clean_wiki.txt  configure.ac  labelled  modes.xml  unks-tmp-sort
data/: CLEAN_WIKI_TEXT_v2_Final.txt  wiki.txt
dev/: lrec_review_improvements.txt
eval/: Makefile  diac  foreign  ref.1000.txt  ref_tmp  src.1000.txt  typos  unknown
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
